# group5_calculator

./: setup.cfg
pythoncalculator/: __init__.py
